# vibe_mazegenerator-rs

./: .gitignore  ALGORITHM_EXAMPLES.md  COMPLEXITY_EXAMPLES.md  Cargo.toml  MAKEFILE_TARGETS.md  Makefile  README.md  SIZE_EXAMPLES.md  config.toml  config_complexity_examples.toml  config_doe.toml  config_size_100.toml  config_size_1000.toml  config_size_200.toml  config_size_50.toml  config_size_500.toml
.github/workflows/: ci.yml  release.yml
benches/: maze_generation.rs
docs/: index.html  maze.js  mazegen.html  style.css
docs/pkg/: README.md  maze_generator.d.ts  maze_generator.js  maze_generator_bg.wasm  maze_generator_bg.wasm.d.ts  package.json
src/: config.rs  lib.rs  main.rs  maze.rs  render.rs
src/algorithms/: aldous_broder.rs  bfs.rs  binary_tree.rs  braid_postprocess.rs  cellular_automata.rs  dfs_iterative.rs  drunkards_walk.rs  eller.rs  growing_tree.rs  hamiltonian.rs  hunt_and_kill.rs  kruskal.rs  mod.rs  prim.rs  random_obstacle.rs  recursive_backtracking.rs  recursive_backtracking_braided.rs  recursive_division.rs  sidewinder.rs  voronoi.rs  wilsons.rs
