[package]
name = "maze_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24"
clap = { version = "4.4", features = ["derive"] }
toml = "0.8"
rand = "0.8"
rand_chacha = "0.3"

[[bench]]
name = "maze_generation"
harness = false

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

